// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Confirmation dialogue Custom Action 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="filter svelte-1vslz6j open"
  />
   
  <div
    class="backdrop svelte-1vslz6j open"
  >
    <button
      class="absolute top-0 right-0 m-4 svelte-2vu076 iconOnly"
    >
      <i
        class="material-icons svelte-2vu076"
      >
        close
      </i>
       
       
       
    </button>
     
    <article
      class="svelte-1vslz6j"
    >
      <header
        class="svelte-1vslz6j"
      >
        This is a title
      </header>
       
      <div
        class="content svelte-1vslz6j"
      >
        <div
          class="content svelte-x966ku"
          slot="content"
        >
          Are you really sure?
        </div>
      </div>
       
      <footer
        class="svelte-1vslz6j"
      >
        <span
          slot="buttons"
        >
          <button
            class="mr-2 svelte-2vu076"
          >
            <i
              class="material-icons svelte-2vu076"
            >
              undo
            </i>
             
            <span>
              No, let me go!
            </span>
             
             
          </button>
           
          <button
            class="svelte-2vu076"
          >
            <i
              class="material-icons svelte-2vu076"
            >
              redo
            </i>
             
            <span>
              Yes, I'm sure!
            </span>
             
             
          </button>
        </span>
      </footer>
    </article>
  </div>
   
  
   
  <button
    class="svelte-2vu076"
  >
     
    <span>
      Re-open
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Confirmation dialogue Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="filter svelte-1vslz6j open"
  />
   
  <div
    class="backdrop svelte-1vslz6j open"
  >
    <button
      class="absolute top-0 right-0 m-4 svelte-2vu076 iconOnly"
    >
      <i
        class="material-icons svelte-2vu076"
      >
        close
      </i>
       
       
       
    </button>
     
    <article
      class="svelte-1vslz6j"
    >
      <header
        class="svelte-1vslz6j"
      >
        This is a title
      </header>
       
      <div
        class="content svelte-1vslz6j"
      >
        <div
          class="content svelte-x966ku"
          slot="content"
        >
          Are you really sure?
        </div>
      </div>
       
      <footer
        class="svelte-1vslz6j"
      >
        <span
          slot="buttons"
        >
          <button
            class="mr-2 svelte-2vu076"
          >
            <i
              class="material-icons svelte-2vu076"
            >
              cancel
            </i>
             
            <span>
              No
            </span>
             
             
          </button>
           
          <button
            class="svelte-2vu076"
          >
            <i
              class="material-icons svelte-2vu076"
            >
              done
            </i>
             
            <span>
              Yes
            </span>
             
             
          </button>
        </span>
      </footer>
    </article>
  </div>
   
  
   
  <button
    class="svelte-2vu076"
  >
     
    <span>
      Re-open
    </span>
     
     
  </button>
</section>
`;
